# fastapi-async

./: .env.example  .gitignore  COVERAGE_IMPROVEMENT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
.clinebank/: AsyncTaskFlow_Architecture_with_Metadata.md  frontenddef.md  project-definition.md  tooling-rules.md
docs/: architecture.md  dependency-error-handling-implementation.md  openrouter-state-management-optimization.md  plan.txt  redis-connection-pool-optimization.md
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  nginx-standalone.conf  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/dashboard/: CustomNodes.tsx  QueueStats.tsx  TaskFlowGraph.tsx  WorkerStats.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: dialog.tsx  sheet.tsx
frontend/src/pages/: Dashboard.tsx  TasksCleanup.tsx  TasksHistory.tsx
prompts/: pdfxtract.txt  summarize.txt  xtractpdf.txt
src/api/: Dockerfile  README.md  __init__.py  config.py  main.py  openrouter_state.py  pyproject.toml  redis_config.py  redis_config_simple.py  schemas.py  services.py
src/api/routers/: __init__.py  health.py  openrouter.py  pdfxtract.py  queues.py  redis.py  summarize.py  tasks.py  workers.py
src/worker/: Dockerfile  README.md  __init__.py  circuit_breaker.py  config.py  consumer.py  debug_pdfxtract_response.py  main.py  openrouter_state_reporter.py  prompts.py  pyproject.toml  rate_limiter.py  redis_config.py  scheduler_config.py  start_worker.py  start_worker.sh  tasks.py
tests/: Dockerfile  conftest.py
tests/api/: test_api_endpoints.py  test_services.py  test_task_summaries.py
tests/worker/: test_circuit_breaker.py  test_consumer.py  test_helpers.py  test_openrouter_state_reporter.py  test_process_task.py  test_rate_limiter.py  test_state_management.py  test_worker_tasks.py
utils/: README.md  README_openrouter_credits.md  README_task_query.md  analyze_circuit_breaker_failures.py  cleanup_celery_meta.py  cleanup_metrics.py  debug.py  debug_pdfxtract_response.py  delete_defective_tasks.py  fix_active_counter.py  fix_active_stuck_tasks.py  fix_counter_sync.py  fix_stuck_tasks.py  gen_10_summaries_multilingual.py  initialize_counters.py  inject_dlq_test_tasks.py  inject_test_tasks.py  monitor_openrouter_credits.py  query_task_metadata.py  redis_task_query.sh  reset_redis.py  test_api_endpoints.py  test_dependency_error_handling.py  test_openrouter_credits.py  test_pdfxtract.py  test_rate_limiter.py  test_rate_limiter_simple.py  test_realtime_updates.py  test_task_summaries.py
